Fix register list not showing up

--- a/src/css/register-list.module.css
+++ b/src/css/register-list.module.css
@@ -1,4 +1,10 @@
-.registers-scroll-list-container {
+#register-pane {
+  display: flex;
+  flex-direction: column;
+  align-items: stretch;
+}
+
+#register-scroll-list-container {
   flex-grow: 1;
   min-width: 100px;
   max-width: 400px;
